frontend/src/style/posts.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&display=swap');


:root {
    --post-background-colour: rgb(250, 249, 249);
    --votes-dist-to-left: 10px;
    --votes-dist-to-top: 20px;
}

/* **************************************** Handle fonts *****************************************/

.post-category-name {
    font-family: "Fira Sans", sans-serif;
    font-weight: 600;
}

.post-info span:not(.username) {
    font-family: "Fira Sans", sans-serif;
    font-weight: 300;
    color: grey;
}

.username, .vote-count {
    font-family: "Fira Sans", sans-serif;
    font-weight: 400;
    color: black;
}

.nav-to-comments span {
    font-family: "Fira Sans", sans-serif;
    font-weight: 600;
    color: grey;
}

/*************************************************************************************************/

.posts {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%; /* Ensures that flexbox takes entire width of page. Thus, it is centered in the middle. */
}

.post {
    background: var(--post-background-colour);
    position: relative; /* Ensures that position absolute for post votes works. */
    border: 1px solid white;
    width: 40%;
    margin-top: 10px;
    overflow-wrap: break-word;
    border-radius: 5px;
    padding: 20px;
}

.post-votes {
    position: absolute;
    left: var(--votes-dist-to-left);
    top: var(--votes-dist-to-top);
    
    /* To make pattern of top arrow then votes then bottom arrow */
    display: flex;
    flex-direction: column;
}

.upvote, .downvote {
    cursor: pointer;
}

.vote-count {
    margin-top: 8px;
    margin-bottom: 8px;
}

.post-category-name {
    text-decoration: none;
    color: black;
}

.post-category-name:hover {
    text-decoration: underline;
}

.post-info {
    margin-left: calc(var(--votes-dist-to-left) + 25px); /* Helps stop overlapping of post information and post votes. */
}

.post-title {
    margin-left: calc(var(--votes-dist-to-left) + 25px); /* Helps stop overlapping of post information and post votes. */
    margin-top: 0px;
    margin-bottom: 0px;
}

.post-content {
    margin-left: calc(var(--votes-dist-to-left) + 25px); /* Helps stop overlapping of post information and post votes. */
    margin-top: 0px;
}

.nav-to-comments {
    display: inline-block; /* Ensures that width fits to text length. */
    margin-left: 5px;
}

.nav-to-comments:hover {
    cursor: pointer;
    background-color: rgb(238, 230, 230);
}

#category-name-top-page {
    margin-left: 30vw;
}

